change geolocation to false

--- a/src/flavors/waterfront/config.yml
+++ b/src/flavors/waterfront/config.yml
@@ -20,7 +20,7 @@ app:
 
 # Settings for map and layer configs
 map:
-  geolocation_enabled: true
+  geolocation_enabled: false
   geolocation_onload: false
   cartodb_enabled: true
 
