config lake washington

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -68,13 +68,13 @@ map:
       type: cartodb
       url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
 
-      # WMS landuse
+      # Land Use
     - id: landuse
       type: cartodb
       url: "https://hdbig.cartodb.com/api/v2/viz/76d1e054-d5ed-11e5-bf91-0e5db1731f59/viz.json"
       opacity: 0.5
 
-      # WMS Buildings connection:
+      # Buildings:
     - id: buildings
       url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
       layers: 'wria9:2009BuildingsCOS'
@@ -82,7 +82,7 @@ map:
       transparent: 'true'
       format: 'image/png'
 
-      # WMS NLCD
+      # Land Coverage
     - id: landcoverage
       url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
       layers: 'wria9:nlcd2011'
@@ -504,21 +504,21 @@ sidebar:
           title: _(Land Data)
           visibleDefault: false
           layers:
-              # WMS landuse
+              # Land Use
             - id: landuse
               description-image: /static/css/images/legend-landuse2010.png
               description-image-alt: 'legend'
               title: _(Land use)
               visibleDefault: false
 
-              # WMS NLCD
+              # Land Coverage
             - id: landcoverage
               description-image: /static/css/images/legend-nlcd2011.png
               description-image-alt: 'legend'
               title: _(Land coverage)
               visibleDefault: false
 
-              # WMS Buildings connection:
+              # Buildings
             - id: buildings
               description: _(legend coming soon!)
               title: _(Buildings)
