--- a/src/flavors/lakewashington/config.yml
+++ b/src/flavors/lakewashington/config.yml
@@ -22,6 +22,7 @@ app:
 map:
   geolocation_enabled: true
   geolocation_onload: false
+  cartodb_enabled: true
 
   geocoding_enabled: false
   geocode_field_label: _(Enter an address...)
@@ -35,6 +36,7 @@ map:
     minZoom: 1
     maxZoom: 18
   layers:
+    # Mapbox Satellite
     - url: //api.tiles.mapbox.com/v4/smartercleanup.ndhd2lem/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="http://mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">.'
 
@@ -55,6 +57,21 @@ map:
             shadowUrl: /static/css/images/marker-shadow.png
             iconSize: [25, 41]
             iconAnchor: [12, 41]
+
+      # Kenmore Land use
+    - id: kenmore-land-use
+      type: cartodb
+      url: https://smartercleanup.cartodb.com/api/v2/viz/7eed0a34-dddb-11e5-9c46-0e787de82d45/viz.json
+
+      # Noxious Weeds
+    - id: noxious-weeds
+      type: cartodb
+      url: "https://hdbig.cartodb.com/api/v2/viz/f9350ac8-d677-11e5-980b-0e5db1731f59/viz.json"
+
+      # Eco Regions
+    - id: eco-regions
+      type: cartodb
+      url: "https://smartercleanup.cartodb.com/api/v2/viz/9d4d8cfa-ddc3-11e5-9bed-0ea31932ec1d/viz.json"
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
@@ -213,30 +230,55 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-
 sidebar:
   enabled: true
   legend_enabled: true
   slug: filter-type
   # Layers are defined in the "map config" section
   # TODO: Refactor the Layers section into its own sidebar
-  layersTitle: _(Map Layers)
-  reports:
-    title: _(Report Types)
-    items:
-      - title: _(Observations)
-        image: /static/css/images/markers/marker-observation.png
-        url: /filter/observation
-      - title: _(Ideas)
-        image: /static/css/images/markers/marker-idea.png
-        url: /filter/idea
-      - title: _(Questions)
-        image: /static/css/images/markers/marker-question.png
-        url: /filter/question
-      - title: _(Complaints)
-        image: /static/css/images/markers/marker-complaint.png
-        url: /filter/complaint
+  panels:
+    legend:
+      title: _(Legend:)
+      items:
+        - title: _(Observations)
+          image: /static/css/images/markers/marker-observation.png
+          url: /filter/observation
+        - title: _(Ideas)
+          image: /static/css/images/markers/marker-idea.png
+          url: /filter/idea
+        - title: _(Questions)
+          image: /static/css/images/markers/marker-question.png
+          url: /filter/question
+        - title: _(Complaints)
+          image: /static/css/images/markers/marker-complaint.png
+          url: /filter/complaint
+    gis_layers:
+      title: _(Map Layers:)
+      groupings:
+        - id: grp-land
+          title: _(Land Data)
+          visibleDefault: false
+          layers:
+              # Noxious Weeds
+            - id: noxious-weeds
+              title: _(Noxious Weeds)
+              description: _(Invasive species of weeds)
+              visibleDefault: false
 
+              # Eco Regions
+            - id: eco-regions
+              title: _(Eco Regions)
+              description: _(Eco regions of Washington State)
+              visibleDefault: false
+
+              # Kenmore Land use
+            - id: kenmore-land-use
+              title: _(Kenmore land use)
+              description: _(Land use data for Kenmore)
+              visibleDefault: false
+
+    ticker:
+      title: _(Activity Stream:)
 leaflet_sidebar:
   enabled: true
 
@@ -361,7 +403,7 @@ pages:
   - title: _(About)
     slug: about
     name: overview
-    start_page: true
+    start_page: false
 
   - title: _(Get involved)
     slug: getinvolved
