--- a/src/flavors/defaultflavor/config.yml
+++ b/src/flavors/defaultflavor/config.yml
@@ -213,7 +213,9 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-
+# Sidebar and activity stream should be enabled and disabled together!
+# note: sidebar is aka 'MasterLegend'
+# TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
 sidebar:
   enabled: true
   legend_enabled: true
