connect form submissions to appropriate model collections

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -620,6 +620,7 @@ place:
   categories:
     observation:
       name: location_type
+      dataset: duwamish
       icon_url: /static/css/images/markers/marker-observation.png
       value: observation
       label: _(Observation)
@@ -641,6 +642,7 @@ place:
           optional: false
     question:
       name: location_type
+      dataset: duwamish
       icon_url: /static/css/images/markers/marker-question.png
       value: question
       label: _(Question)
@@ -652,6 +654,7 @@ place:
           optional: false
     idea:
       name: location_type
+      dataset: duwamish
       icon_url: /static/css/images/markers/marker-idea.png
       value: idea
       label: _(Idea)
@@ -668,6 +671,7 @@ place:
           optional: false
     complaint:
       name: location_type
+      dataset: duwamish
       icon_url: /static/css/images/markers/marker-complaint.png
       value: complaint
       label: _(Complaint)
@@ -679,6 +683,7 @@ place:
           optional: false
     air_watch:  #defines a top-level form category
       name: location_type  #needs to be "location_type"
+      dataset: air
       icon_url: /static/css/images/markers/marker-complaint.png  #TEMPORARY
       value: air_watch  #internal value used for this category
       label: _(Air watch)  #label for this category
@@ -743,6 +748,7 @@ place:
           optional: true   
     tree:
       name: location_type
+      dataset: trees
       icon_url: /static/css/images/markers/marker-tree.png
       value: tree
       label: _(Tree)
