--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -74,22 +74,10 @@ map:
       url: "https://hdbig.cartodb.com/api/v2/viz/76d1e054-d5ed-11e5-bf91-0e5db1731f59/viz.json"
       opacity: 0.5
 
-      # Buildings:
-    - id: buildings
-      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
-      layers: 'wria9:2009BuildingsCOS'
-      version: '1.1.0'
-      transparent: 'true'
-      format: 'image/png'
-
-      # Land Coverage
-    - id: landcoverage
-      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
-      layers: 'wria9:nlcd2011'
-      version: '1.1.0'
-      transparent: 'true'
-      format: 'image/png'
-      opacity: 0.6
+      # Green Seattle Partnership restoration phases
+    - id: phases
+      type: cartodb
+      url: "https://gis206.cartodb.com/api/v2/viz/217a2e02-e729-11e5-9bd4-0e5db1731f59/viz.json"
 
       # WMS Original Flow
     - id: duwamish-original
@@ -504,22 +492,14 @@ sidebar:
           layers:
               # Land Use
             - id: landuse
-              description-image: /static/css/images/legend-landuse2010.png
-              description-image-alt: 'legend'
               title: _(Land use)
+              description: _(Land use data from 2010)
               visibleDefault: false
 
-              # Land Coverage
-            - id: landcoverage
-              description-image: /static/css/images/legend-nlcd2011.png
-              description-image-alt: 'legend'
-              title: _(Land coverage)
-              visibleDefault: false
-
-              # Buildings
-            - id: buildings
-              description: _(legend coming soon!)
-              title: _(Buildings)
+              # Green Seattle Partnership restoration phases
+            - id: phases
+              title: _(Green Seattle partnership)
+              description: _(Restoration phases from the Green Seattle Partnership)
               visibleDefault: false
 
               # Noxious Weeds
